--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
         html,
         body {
             width: 100%;
-            height: 768px;
+            height: 100%;
+            margin:0;
+            padding:0;
         }
 
         #stage {
             width: 100%;
-            min-height: 768px;
+            height: 100%;
         }
     </style>
 </head>
