--- a/assets/character/stand.html
+++ b/assets/character/stand.html
@@ -37,6 +37,7 @@
       await scene.preload([birdsRes, birdsJsonUrl]);
       // 前景
       fglayer(scene);
+      keyboard(scene)
     })();
 
   </script>
