--- a/pixi/index.html
+++ b/pixi/index.html
@@ -5,534 +5,24 @@
   </head>
   <body>
     <script type="module">
+      import stand from './stand.js';
+      import walk from './walk.js';
       // Create the application helper and add its render target to the page
       const app = new PIXI.Application();
       await app.init({ width: 640, height: 360 });
       document.body.appendChild(app.canvas);
 
-      // Create object to store sprite sheet data
-      const atlasData = {
-        frames: {
-          "walk00.png": {
-            frame: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            rotated: false,
-            trimmed: false,
-            spriteSourceSize: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            sourceSize: {
-              w: 255,
-              h: 199,
-            },
-          },
-          "walk01.png": {
-            frame: {
-              x: 255,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            rotated: false,
-            trimmed: false,
-            spriteSourceSize: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            sourceSize: {
-              w: 255,
-              h: 199,
-            },
-          },
-          "walk02.png": {
-            frame: {
-              x: 510,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            rotated: false,
-            trimmed: false,
-            spriteSourceSize: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            sourceSize: {
-              w: 255,
-              h: 199,
-            },
-          },
-          "walk03.png": {
-            frame: {
-              x: 765,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            rotated: false,
-            trimmed: false,
-            spriteSourceSize: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            sourceSize: {
-              w: 255,
-              h: 199,
-            },
-          },
-          "walk04.png": {
-            frame: {
-              x: 1020,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            rotated: false,
-            trimmed: false,
-            spriteSourceSize: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            sourceSize: {
-              w: 255,
-              h: 199,
-            },
-          },
-          "walk05.png": {
-            frame: {
-              x: 1275,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            rotated: false,
-            trimmed: false,
-            spriteSourceSize: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            sourceSize: {
-              w: 255,
-              h: 199,
-            },
-          },
-          "walk10.png": {
-            frame: {
-              x: 0,
-              y: 199,
-              w: 255,
-              h: 199,
-            },
-            rotated: false,
-            trimmed: false,
-            spriteSourceSize: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            sourceSize: {
-              w: 255,
-              h: 199,
-            },
-          },
-          "walk11.png": {
-            frame: {
-              x: 255,
-              y: 199,
-              w: 255,
-              h: 199,
-            },
-            rotated: false,
-            trimmed: false,
-            spriteSourceSize: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            sourceSize: {
-              w: 255,
-              h: 199,
-            },
-          },
-          "walk12.png": {
-            frame: {
-              x: 510,
-              y: 199,
-              w: 255,
-              h: 199,
-            },
-            rotated: false,
-            trimmed: false,
-            spriteSourceSize: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            sourceSize: {
-              w: 255,
-              h: 199,
-            },
-          },
-          "walk13.png": {
-            frame: {
-              x: 765,
-              y: 199,
-              w: 255,
-              h: 199,
-            },
-            rotated: false,
-            trimmed: false,
-            spriteSourceSize: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            sourceSize: {
-              w: 255,
-              h: 199,
-            },
-          },
-          "walk14.png": {
-            frame: {
-              x: 1020,
-              y: 199,
-              w: 255,
-              h: 199,
-            },
-            rotated: false,
-            trimmed: false,
-            spriteSourceSize: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            sourceSize: {
-              w: 255,
-              h: 199,
-            },
-          },
-          "walk15.png": {
-            frame: {
-              x: 1275,
-              y: 199,
-              w: 255,
-              h: 199,
-            },
-            rotated: false,
-            trimmed: false,
-            spriteSourceSize: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            sourceSize: {
-              w: 255,
-              h: 199,
-            },
-          },
-          "walk20.png": {
-            frame: {
-              x: 0,
-              y: 398,
-              w: 255,
-              h: 199,
-            },
-            rotated: false,
-            trimmed: false,
-            spriteSourceSize: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            sourceSize: {
-              w: 255,
-              h: 199,
-            },
-          },
-          "walk21.png": {
-            frame: {
-              x: 255,
-              y: 398,
-              w: 255,
-              h: 199,
-            },
-            rotated: false,
-            trimmed: false,
-            spriteSourceSize: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            sourceSize: {
-              w: 255,
-              h: 199,
-            },
-          },
-          "walk22.png": {
-            frame: {
-              x: 510,
-              y: 398,
-              w: 255,
-              h: 199,
-            },
-            rotated: false,
-            trimmed: false,
-            spriteSourceSize: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            sourceSize: {
-              w: 255,
-              h: 199,
-            },
-          },
-          "walk23.png": {
-            frame: {
-              x: 765,
-              y: 398,
-              w: 255,
-              h: 199,
-            },
-            rotated: false,
-            trimmed: false,
-            spriteSourceSize: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            sourceSize: {
-              w: 255,
-              h: 199,
-            },
-          },
-          "walk24.png": {
-            frame: {
-              x: 1020,
-              y: 398,
-              w: 255,
-              h: 199,
-            },
-            rotated: false,
-            trimmed: false,
-            spriteSourceSize: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            sourceSize: {
-              w: 255,
-              h: 199,
-            },
-          },
-          "walk25.png": {
-            frame: {
-              x: 1275,
-              y: 398,
-              w: 255,
-              h: 199,
-            },
-            rotated: false,
-            trimmed: false,
-            spriteSourceSize: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            sourceSize: {
-              w: 255,
-              h: 199,
-            },
-          },
-          "walk30.png": {
-            frame: {
-              x: 0,
-              y: 597,
-              w: 255,
-              h: 199,
-            },
-            rotated: false,
-            trimmed: false,
-            spriteSourceSize: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            sourceSize: {
-              w: 255,
-              h: 199,
-            },
-          },
-          "walk31.png": {
-            frame: {
-              x: 255,
-              y: 597,
-              w: 255,
-              h: 199,
-            },
-            rotated: false,
-            trimmed: false,
-            spriteSourceSize: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            sourceSize: {
-              w: 255,
-              h: 199,
-            },
-          },
-          "walk32.png": {
-            frame: {
-              x: 510,
-              y: 597,
-              w: 255,
-              h: 199,
-            },
-            rotated: false,
-            trimmed: false,
-            spriteSourceSize: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            sourceSize: {
-              w: 255,
-              h: 199,
-            },
-          },
-          "walk33.png": {
-            frame: {
-              x: 765,
-              y: 597,
-              w: 255,
-              h: 199,
-            },
-            rotated: false,
-            trimmed: false,
-            spriteSourceSize: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            sourceSize: {
-              w: 255,
-              h: 199,
-            },
-          },
-          "walk34.png": {
-            frame: {
-              x: 1020,
-              y: 597,
-              w: 255,
-              h: 199,
-            },
-            rotated: false,
-            trimmed: false,
-            spriteSourceSize: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            sourceSize: {
-              w: 255,
-              h: 199,
-            },
-          },
-          "walk35.png": {
-            frame: {
-              x: 1275,
-              y: 597,
-              w: 255,
-              h: 199,
-            },
-            rotated: false,
-            trimmed: false,
-            spriteSourceSize: {
-              x: 0,
-              y: 0,
-              w: 255,
-              h: 199,
-            },
-            sourceSize: {
-              w: 255,
-              h: 199,
-            },
-          },
-        },
-        meta: {
-          image: "../assets/character/walk.png",
-          format: "RGBA8888",
-          size: {
-            w: 1530,
-            h: 796,
-          },
-          scale: "1",
-        },
-        animations: {
-          walk: [
-            "walk00.png",
-            "walk01.png",
-            "walk02.png",
-            "walk03.png",
-            "walk04.png",
-            "walk05.png",
-          ],
-        },
-      };
-      const texture = await PIXI.Assets.load(atlasData.meta.image);
-      // Create the SpriteSheet from data and image
-      const spritesheet = new PIXI.Spritesheet(
-        texture,
-        atlasData
-      );
 
-      // Generate all the Textures asynchronously
-      await spritesheet.parse();
-
-      // spritesheet is ready to use!
-      const anim = new PIXI.AnimatedSprite(spritesheet.animations.walk);
-
-      // set the animation speed
-      anim.animationSpeed = 0.1666;
+      const anim = await stand.create();
       // play the animation on a loop
       anim.play();
       // add it to the stage to render
       app.stage.addChild(anim);
+
+      const anim2 = await walk.create();
+      anim2.position.set(100, 0);
+      anim2.play();
+      app.stage.addChild(anim2);
     </script>
   </body>
 </html>
